updateUser refactored
