# swagger.json
@@ -62,13 +62,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "User successfully created"
-                    }
-                  }
+                  "$ref": "#/components/schemas/UserInfo"
                 }
               }
             }
@@ -180,7 +174,7 @@
       }
     },
 
-    "/users/:userId": {
+    "/users/userinfo/:userId": {
       "get": {
         "tags": ["Users"],
         "summary": "Getting user info",
@@ -204,6 +198,106 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/UserInfo"
+                }
+              }
+            }
+          },
+
+          "400": {
+            "description": "Invalid id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "id is not valid"
+                    }
+                  }
+                }
+              }
+            }
+          },
+
+          "401": {
+            "description": "Authorization error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Not authorize to get another user data"
+                    }
+                  }
+                }
+              }
+            }
+          },
+
+          "404": {
+            "description": "User not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "User < user ID > not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/users/userupdate/:userId": {
+      "patch": {
+        "tags": ["Users"],
+        "summary": "Updating user info",
+        "description": "API endpoint for udating user information",
+
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "type": "string",
+            "description": "Valid mongo DB id",
+            "example": "63ee26069ac5b92d9b405c03"
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "User information",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserInfo"
+                }
+              }
+            }
+          },
+
+          "400": {
+            "description": "Invalid id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "id is not valid"
+                    }
+                  }
                 }
               }
             }
